...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/ReturnButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#FFFFFF"
            android:textAlignment="center"
            android:textColor="#FF9800"
            app:layout_constraintBottom_toBottomOf="parent"
...
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/continueDuck"
        android:layout_width="245dp"
        android:layout_height="245dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="30dp"
        android:background="#FFFFFF"
...
