<resources>
    <string name="app_name">ProDucktive</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ProDucktive</string>
    <string name="nav_header_subtitle">Take flight with your productivity</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_data">Usage Data</string>
    <string name="menu_todo">To Do</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_block">Block Apps</string>

    <string name="block_page">Begin blocking</string>
    <string name="block_button">Custom settings</string>
    <string name="smart_block">Smart blocking</string>

    <string name="current_date">March, 2020</string>
    <string name="add_event">ADD CALENDAR EVENT</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="last_date">30</string>
    <string name="current_month_placeholder">January 1970</string>
    <string name="previous_month_placeholder">&lt;&lt;</string>
    <string name="next_month_placeholder">&gt;&gt;</string>
    <string-array name="days_array">
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
        <item>S</item>
    </string-array>

    <string name="hello_world">Hello world!</string>
</resources>
